--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.0",
+    "axios": "^1.11.0",
     "expo": "~53.0.12",
     "expo-constants": "~17.1.6",
     "expo-secure-store": "^14.2.3",
